--- a/myQRcode/de.lproj/Info.plist
+++ b/myQRcode/de.lproj/Info.plist
@@ -76,9 +76,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>CAMERA_DESC</string>
+	<string>camera_desc</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>PHOTO_LIBRARY_DESC</string>
+	<string>library_desc</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
