--- a/myQRcode/Info.plist
+++ b/myQRcode/Info.plist
@@ -78,7 +78,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>This app needs access to your back camera to scan QR codes</string>
+	<string>This app needs access to your back camera to scan QR-codes</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This app needs access to your photo library so it can save generated codes to your library</string>
 	<key>UILaunchStoryboardName</key>
