--- a/myQRcode.xcodeproj/xcshareddata/xcschemes/myQRcode.xcscheme
+++ b/myQRcode.xcodeproj/xcshareddata/xcschemes/myQRcode.xcscheme
@@ -64,6 +64,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "en"
       region = "DE"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
