--- a/myQRcode.xcodeproj/xcshareddata/xcschemes/myQRcode.xcscheme
+++ b/myQRcode.xcodeproj/xcshareddata/xcschemes/myQRcode.xcscheme
@@ -65,7 +65,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       language = "en"
-      region = "DE"
+      region = "US"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
