--- a/myBarcode.xcodeproj/xcshareddata/xcschemes/myBarcode.xcscheme
+++ b/myBarcode.xcodeproj/xcshareddata/xcschemes/myBarcode.xcscheme
@@ -26,7 +26,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      language = "de"
+      region = "DE">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
